# LecturePlots

./: README.md  viewer.html
EME2/: Lecture_2_Displacement_Field_Animation.html  Lecture_2_Displacement_Field_Animation.py
Engineering Mechanics/: testplot.html  testplot.py
Lecture1/: testplot.html  testplot.py
Template_Plots/: testplot.html  testplot.py
pylectureplots/: .gitignore  LICENSE  README.md  export_utils.py  pyproject.toml
pylectureplots/src/pylectureplots/: __init__.py  export_utils.py
