[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylectureplots"       # Package name on pip
version = "0.1.0"
authors = [
    { name="Felix Boy" }
]
description = "Lecture plotting utilities"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pathlib"
]

[tool.setuptools]
packages = ["pylectureplots"]